--- a/templates/index.html
+++ b/templates/index.html
@@ -269,7 +269,7 @@
               </div>
 
             </div>
-            <a href="#0" class="button button-lg radius-3 wow fadeInUp" data-wow-delay=".7s">Learn More</a>
+            <a href="{% url 'about_us' %}" class="button button-lg radius-3 wow fadeInUp" data-wow-delay=".7s">To Know More</a>
           </div>
         </div>
 
